@@ -46,15 +46,32 @@ if sys.platform == 'win32':
     libs.extend([ os.path.join(sys.prefix, 'SCons-__VERSION__'),
                   os.path.join(sys.prefix, 'SCons') ])
 else:
+    prefs = []
+
+    _bin = os.path.join('', 'bin')
     _usr = os.path.join('', 'usr')
     _usr_local = os.path.join('', 'usr', 'local')
-    if sys.prefix[-len(_usr):] == _usr:
-        prefs = [sys.prefix, os.path.join(sys.prefix, "local")]
-    elif sys.prefix[-len(_usr_local)] == _usr_local:
-        _local = os.path.join('', 'local')
-        prefs = [sys.prefix[:-len(_local)], sys.prefix]
+
+    script_dir = sys.path[0]
+
+    if script_dir == 'bin':
+        prefs.append(os.getcwd())
     else:
-        prefs = [sys.prefix]
+        if script_dir == '.' or script_dir == '':
+            script_dir = os.getcwd()
+        if script_dir[-len(_bin):] == _bin:
+            prefs.append(script_dir[:-len(_bin)])
+
+    if sys.prefix[-len(_usr):] == _usr:
+        prefs.append(sys.prefix)
+	prefs.append(os.path.join(sys.prefix, "local"))
+    elif sys.prefix[-len(_usr_local):] == _usr_local:
+        _local = os.path.join('', 'local')
+        prefs.append(sys.prefix[:-len(_local)])
+        prefs.append(sys.prefix)
+    else:
+        prefs.append(sys.prefix)
+
     libs.extend(map(lambda x: os.path.join(x, 'lib', 'scons-__VERSION__'), prefs))
     libs.extend(map(lambda x: os.path.join(x, 'lib', 'scons'), prefs))
 
